mavensmate/Safety Equipment/src/objects/Safety_Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Safety Equipment</relationshipLabel>
        <relationshipName>Safety_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ball_Shank_Batch__c</fullName>
        <label>Ball Shank Batch</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ball_Shank_Die__c</fullName>
        <label>Ball Shank Die</label>
        <picklist>
            <picklistValues>
                <fullName>2012_07_30-32</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comma_Separated_Serial_Numbers__c</fullName>
        <label>Comma Separated Serial Numbers</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Serial_Number__c</fullName>
        <label>End Serial Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ferule_Batch__c</fullName>
        <label>Ferule Batch</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ferule_Die__c</fullName>
        <label>Ferule Die</label>
        <picklist>
            <picklistValues>
                <fullName>July 30, 2012 - 45</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manufacture_Date__c</fullName>
        <label>Manufacture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <picklistValues>
                <fullName>RSA2 Slingline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trolley Slingline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skyrail Slingline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Returned__c</fullName>
        <label>Reason Returned</label>
        <picklist>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Serial_Number__c</fullName>
        <label>Start Serial Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Results__c</fullName>
        <label>Test Results</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tested_By__c</fullName>
        <label>Tested By</label>
        <picklist>
            <picklistValues>
                <fullName>Rick McKinney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dale Washburn Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dale Washburn Sr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Safety Equipment</label>
    <listViews>
        <fullName>Assigned</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_Date__c</columns>
        <columns>Model__c</columns>
        <columns>Test_Results__c</columns>
        <columns>Tested_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>Assigned</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inventory</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_Date__c</columns>
        <columns>Model__c</columns>
        <columns>Test_Results__c</columns>
        <columns>Tested_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inventory</value>
        </filters>
        <label>Inventory</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Safety Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>